--- a/web-app/local-console/index.html
+++ b/web-app/local-console/index.html
@@ -7,9 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="css/reset.css">
-	<link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css'>
-	<link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
-	<link rel='stylesheet prefetch' href='http://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css'>
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -185,6 +184,7 @@
 								</div>
 							</div>
 						</div>
+
 						<div class="col-lg-3 col-md-8 col-xs-12">
 							<div class="panel panel-default">
 								<div class="panel-heading">
@@ -286,13 +286,9 @@
 		</section>
 	</main>
 
-	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-	<script src='http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js'></script>
-	<script src='http://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js'></script>
-	<script src='http://code.jquery.com/ui/1.11.4/jquery-ui.js'></script>
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/jQuery-slimScroll/1.3.3/jquery.slimscroll.min.js'></script>
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.8.0/lodash.min.js'></script>
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js'></script>
+	<script src="js/vendor/jquery-1.11.3.min.js"></script>
+	<script src="js/vendor/jquery.slimscroll.min.js"></script>
+	<script src="js/vendor/underscore.min.js"></script>
 	<script src="js/index.js"></script>
 
 </body>
