--- a/web-app/local-console/index.html
+++ b/web-app/local-console/index.html
@@ -129,7 +129,7 @@
 							<div class="rad-info-box rad-txt-success">
 								<i class="fa fa-play"></i>
 								<span class="heading">Node Status</span>
-								<span class="value" id="default-node-status">
+								<span class="value default" id="default-node-status">
 									<span></span>
 								</span>
 							</div>
@@ -139,7 +139,7 @@
 							<div class="rad-info-box">
 								<i class="fa fa-users"></i>
 								<span class="heading">Peers</span>
-								<span class="value" id="default-peers">
+								<span class="value default" id="default-peers">
 									<span></span>
 								</span>
 							</div>
@@ -149,7 +149,7 @@
 							<div class="rad-info-box rad-txt-primary">
 								<i class="fa fa-cubes"></i>
 								<span class="heading">Blocks</span>
-								<span class="value" id="default-blocks">
+								<span class="value default" id="default-blocks">
 									<span></span>
 								</span>
 							</div>
@@ -159,7 +159,7 @@
 							<div class="rad-info-box rad-txt-danger">
 								<i class="fa fa-exchange"></i>
 								<span class="heading">Queued Transactions</span>
-								<span class="value" id="default-txn">
+								<span class="value default" id="default-txn">
 									<span></span>
 								</span>
 							</div>
