--- a/web-app/local-console/index.html
+++ b/web-app/local-console/index.html
@@ -130,7 +130,7 @@
 								<i class="fa fa-play"></i>
 								<span class="heading">Node Status</span>
 								<span class="value default" id="default-node-status">
-									<span></span>
+									<span>Refreshing</span>
 								</span>
 							</div>
 						</div>
@@ -140,7 +140,7 @@
 								<i class="fa fa-users"></i>
 								<span class="heading">Peers</span>
 								<span class="value default" id="default-peers">
-									<span></span>
+									<span>-</span>
 								</span>
 							</div>
 						</div>
@@ -150,7 +150,7 @@
 								<i class="fa fa-cubes"></i>
 								<span class="heading">Blocks</span>
 								<span class="value default" id="default-blocks">
-									<span></span>
+									<span>-</span>
 								</span>
 							</div>
 						</div>
@@ -160,7 +160,7 @@
 								<i class="fa fa-exchange"></i>
 								<span class="heading">Queued Transactions</span>
 								<span class="value default" id="default-txn">
-									<span></span>
+									<span>-</span>
 								</span>
 							</div>
 						</div>
