--- a/geth-resources/local-console/index.html
+++ b/geth-resources/local-console/index.html
@@ -107,7 +107,7 @@
 				<li id="explorer">
 					<a href="#">
 						<i class="fa fa-cubes"><span class="icon-bg rad-bg-violet"></span></i>
-						<span class="rad-sidebar-item">Block Explorer</span>
+						<span class="rad-sidebar-item">Chain Explorer</span>
 					</a>
 				</li>
 			</ul>
