--- a/geth-resources/local-console/index.html
+++ b/geth-resources/local-console/index.html
@@ -176,12 +176,14 @@
 		</section>
 	</main>
 
-	<script src="js/vendor/jquery-1.11.3.min.js"></script>
-	<script src="js/vendor/jquery.slimscroll.min.js"></script>
-	<script src="js/vendor/underscore.min.js"></script>
-	<script src="js/utils.js"></script>
-	<script src="js/index.js"></script>
-	<script src="js/templates.js"></script>
+	<script type="text/javascript" src="js/vendor/jquery-1.11.3.min.js"></script>
+	<script type="text/javascript" src="js/vendor/jquery.slimscroll.min.js"></script>
+	<script type="text/javascript" src="js/vendor/underscore.min.js"></script>
+	<script type="text/javascript" src="js/vendor/sockjs-0.3.4.min.js"></script>
+	<script type="text/javascript" src="js/vendor/stomp.min.js"></script>
+	<script type="text/javascript" src="js/utils.js"></script>
+	<script type="text/javascript" src="js/index.js"></script>
+	<script type="text/javascript" src="js/templates.js"></script>
 
 </body>
 
