NPDAPPS-2065 GUI: block list widget

--- a/geth-resources/local-console/index.html
+++ b/geth-resources/local-console/index.html
@@ -179,6 +179,7 @@
 	<script type="text/javascript" src="js/vendor/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="js/vendor/jquery.slimscroll.min.js"></script>
 	<script type="text/javascript" src="js/vendor/underscore.min.js"></script>
+	<script type="text/javascript" src="js/vendor/moment.min.js"></script>
 	<script type="text/javascript" src="js/vendor/sockjs-0.3.4.min.js"></script>
 	<script type="text/javascript" src="js/vendor/stomp.min.js"></script>
 	<script type="text/javascript" src="js/utils.js"></script>
