start UI cleanup

--- a/src/main/webapp/sandbox.html
+++ b/src/main/webapp/sandbox.html
@@ -76,10 +76,12 @@
 						</div>
 					</div>
 					<div id="settingsView">
-						<div class="version row"><strong>Solidity version:</strong> <span id="version">(loading)</span></div>
-						<div class="row">Change to: <select id="versionSelector"></select></div>
 						<div class="row">
+							<strong>Editor options:</strong>
 							<label for="editorWrap"><input id="editorWrap" type="checkbox">Text Wrap</label>
+						</div>
+						<div class="row">
+							<strong>Compiler options:</strong>
 							<label for="optimize"><input id="optimize" type="checkbox">Enable Optimization</label>
 						</div>
 					</div>
