--- a/src/main/webapp/sandbox.html
+++ b/src/main/webapp/sandbox.html
@@ -28,7 +28,7 @@
 		-->
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 		<title>Solidity realtime compiler and runtime</title>
-		<link rel="stylesheet" href="css/styles.css">
+		<link rel="stylesheet" href="css/sandbox.css">
 		<link rel="stylesheet" href="css/pygment_trac.css">
 		<link rel="stylesheet" href="css/universal-dapp.css">
 		<link rel="stylesheet" href="css/browser-solidity.css">
@@ -52,13 +52,14 @@
 			<div id="header">
 				<div id="menu">
 					<ul id="options">
-						<li class="settingsView active"><i class="fa fa-gear"></i></li>
+						<li class="settingsView active" title="Settings"><i class="fa fa-gear"></i></li>
 						<li class="txView"><i class="fa fa-send"></i></li>
 						<li class="envView"><i class="fa fa-cube"></i></li>
-						<li class="publishView"><i class="fa fa-cloud-upload"></i></li>
+						<li class="docs">
+							<a href="https://solidity.readthedocs.org" target="_blank" class="fa fa-question" title="Solidity Documentation" class="fa fa-2x fa-question"></a>
+						</li>
 					</ul>
-					<a href="https://solidity.readthedocs.org" target="_blank" id="helpButton" class="fa fa-question" title="Documentation" class="fa fa-question"></a>
-					<img id="solIcon" title="Solidity realtime compiler and runtime" src="img/sol.svg" alt="Solidity realtime compiler and runtime">
+					<img id="solIcon" title="Solidity realtime compiler and runtime" src="img/sol.svg" alt="Solidity Sandbox">
 				</div>
 				<div id="optionViews" class="settingsView">
 					<div id="txView">
@@ -85,10 +86,6 @@
 							<label for="optimize"><input id="optimize" type="checkbox">Enable Optimization</label>
 						</div>
 					</div>
-					<div id="publishView">
-						<p><button id="gist" title="Publish all files as public gist on github.com"><i class="fa fa-github"></i> Publish Gist</button> Publish all open files to an anonymous github gist.</p>
-						<p>You can also load a gist by adding the following <span class="pre">?gist=GIST_ID</span> to your url, where GIST_ID is the id of the gist to load.</p>
-					</div>
 					<div id="envView">
 						<span id="executionContext">
 							<label for="vm">
@@ -99,8 +96,8 @@
 							<label for="web3">
 								<input id="web3" type="radio" value="web3" name="executionContext">
 								<strong>Web3 Provider</strong>
-                                                                <p>Execution environment connects to node at localhost (or via IPC if available), transactions will be sent to the network and can cause loss of money or worse!<br/>
-                                                                <b>If this page is served via https and you access your node via http, it might not work. In this case, try cloning the repository and serving it via http.</b></p>
+                                <p>Execution environment connects to node at localhost (or via IPC if available), transactions will be sent to the network and can cause loss of money or worse!<br/>
+                                <b>If this page is served via https and you access your node via http, it might not work. In this case, try cloning the repository and serving it via http.</b></p>
 								<label for="web3Endpoint">
 									<strong>Web3 Provider Endpoint</strong>: <input type="text" id="web3Endpoint" value="http://localhost:8545">
 								</label>
@@ -123,9 +120,10 @@
 		<script src="js/vendor/web3.min.js"></script>
 		<script src="js/vendor/ballot.sol.js"></script>
 
-		<!-- <script type="text/javascript" src="js/vendor/moment.min.js"></script> -->
-		<script type="text/javascript" src="js/vendor/underscore.min.js"></script>
+		<!-- <script src="js/vendor/moment.min.js" charset="utf-8"></script> -->
+		<script src="js/vendor/underscore.min.js" charset="utf-8"></script>
 		<script src="js/vendor/backbone.js" charset="utf-8"></script>
+
 		<script src="js/client.js" charset="utf-8"></script>
 		<script src="js/model/contract.js" charset="utf-8"></script>
 
