[sandbox] allow hiding of compiler output

--- a/src/main/webapp/sandbox.html
+++ b/src/main/webapp/sandbox.html
@@ -107,7 +107,10 @@
 
 				</div>
 			</div>
-			<div id="output"></div>
+			<div id="output">
+		        <h2>Compiler Output <i class='fa fa-minus-square-o'></i></h2>
+				<div class="compiler_output"></div>
+			</div>
 		</div>
 
 		<!-- <script src="bin/list.js"></script> -->
