--- a/src/main/webapp/sandbox.html
+++ b/src/main/webapp/sandbox.html
@@ -52,16 +52,16 @@
 			<div id="header">
 				<div id="menu">
 					<ul id="options">
-						<li class="settingsView active" title="Settings"><i class="fa fa-gear"></i></li>
-						<li class="txView"><i class="fa fa-send"></i></li>
-						<li class="envView"><i class="fa fa-cube"></i></li>
+						<li class="txView active"><i class="fa fa-send"></i></li>
+						<li class="compilerView" title="Compiler Output"><i class="fa fa-code"></i></li>
+						<li class="settingsView" title="Settings"><i class="fa fa-gear"></i></li>
 						<li class="docs">
 							<a href="https://solidity.readthedocs.org" target="_blank" class="fa fa-question" title="Solidity Documentation" class="fa fa-2x fa-question"></a>
 						</li>
 					</ul>
 					<img id="solIcon" title="Solidity realtime compiler and runtime" src="img/sol.svg" alt="Solidity Sandbox">
 				</div>
-				<div id="optionViews" class="settingsView">
+				<div id="optionViews" class="txView">
 					<div id="txView">
 						<div class="row">
 							<label for="txorigin"><select name="txorigin" id="txorigin"></select> Transaction origin</label>
@@ -86,30 +86,13 @@
 							<label for="optimize"><input id="optimize" type="checkbox">Enable Optimization</label>
 						</div>
 					</div>
-					<div id="envView">
-						<span id="executionContext">
-							<label for="vm">
-								<input id="vm" type="radio" value="vm" checked name="executionContext">
-								<strong>JavaScript VM</strong>
-								<p>Execution environment does not connect to any node, everything is local and in memory only.</p>
-							</label>
-							<label for="web3">
-								<input id="web3" type="radio" value="web3" name="executionContext">
-								<strong>Web3 Provider</strong>
-                                <p>Execution environment connects to node at localhost (or via IPC if available), transactions will be sent to the network and can cause loss of money or worse!<br/>
-                                <b>If this page is served via https and you access your node via http, it might not work. In this case, try cloning the repository and serving it via http.</b></p>
-								<label for="web3Endpoint">
-									<strong>Web3 Provider Endpoint</strong>: <input type="text" id="web3Endpoint" value="http://localhost:8545">
-								</label>
-							</label>
-						</span>
+					<div id="compilerView">
+						<div id="output">
+					        <h2>Compiler Output</h2>
+							<div class="compiler_output"></div>
+						</div>
 					</div>
-
 				</div>
-			</div>
-			<div id="output">
-		        <h2>Compiler Output <i class='fa fa-minus-square-o'></i></h2>
-				<div class="compiler_output"></div>
 			</div>
 		</div>
 
@@ -118,9 +101,9 @@
 		<script src="js/vendor/jquery-2.1.3.min.js"></script>
 		<script src="js/vendor/ace.js"></script>
 		<script src="js/vendor/mode-solidity.js"></script>
-		<script src="js/vendor/ethereumjs-vm.js"></script>
-		<script src="js/vendor/universal-dapp.js"></script>
-		<script src="js/vendor/web3.min.js"></script>
+		<!-- <script src="js/vendor/ethereumjs-vm.js"></script> -->
+		<!-- <script src="js/vendor/universal-dapp.js"></script> -->
+		<!-- <script src="js/vendor/web3.min.js"></script> -->
 		<script src="js/vendor/ballot.sol.js"></script>
 
 		<!-- <script src="js/vendor/moment.min.js" charset="utf-8"></script> -->
