[sandbox] added support for constructor args

--- a/src/main/webapp/sandbox.html
+++ b/src/main/webapp/sandbox.html
@@ -91,7 +91,8 @@
 									<label>Or Deploy From Editor:
 										<select class="form-control compiled_contracts"></select>
 									</label>
-									<button class="btn btn-default deploy" type="submit">Deploy</button>
+									<div class="form-group constructor start_hidden">
+									</div>
 								</div>
 
 								<div class="form-group">
