[sandbox] added contract lib links

--- a/src/main/webapp/sandbox.html
+++ b/src/main/webapp/sandbox.html
@@ -130,6 +130,14 @@
 					</div>
 
 					<div id="libView" class="tab start_hidden">
+
+						<h3>Contract Library</h3>
+
+						<div><a class="contract" data-name="Greeter">Greeter (Hello World)</a></div>
+						<div><a class="contract" data-name="SimpleStorage">Simple Storage</a></div>
+						<div><a class="contract" data-name="Bank">Bank</a></div>
+						<div><a class="contract" data-name="Ballot">Ballot</a></div>
+
 					</div>
 
 					<div id="settingsView" class="start_hidden tab">
