GUI: adding sandbox link

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -94,19 +94,25 @@
 				</li>
 				<li id="api">
 					<a href="#" class="snooz">
-						<i class="fa fa-database"><span class="icon-bg rad-bg-primary"></span></i>
+						<i class="fa fa-book"><span class="icon-bg rad-bg-primary"></span></i>
 						<span class="rad-sidebar-item">API</span>
 					</a>
 				</li>
 				<li id="contracts">
 					<a href="#" class="done">
-						<i class="fa fa-code"><span class="icon-bg rad-bg-warning"></span></i>
+						<i class="fa fa-database"><span class="icon-bg rad-bg-warning"></span></i>
 						<span class="rad-sidebar-item">Contracts</span>
 					</a>
 				</li>
+				<li id="sandbox">
+					<a href="sandbox.html" target="_sandbox">
+						<i class="fa fa-code"><span class="icon-bg rad-bg-violet"></span></i>
+						<span class="rad-sidebar-item">Sandbox</span>
+					</a>
+				</li>
 				<li id="explorer">
-					<a href="#">
-						<i class="fa fa-cubes"><span class="icon-bg rad-bg-violet"></span></i>
+					<a href="#" class="done">
+						<i class="fa fa-cubes"><span class="icon-bg rad-bg-success"></span></i>
 						<span class="rad-sidebar-item">Chain Explorer</span>
 					</a>
 				</li>
