--- a/src/main/webapp/sandbox.html
+++ b/src/main/webapp/sandbox.html
@@ -27,7 +27,7 @@
 
 		-->
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
-		<title>Blockchain SDK Sandbox</title>
+		<title>Sandbox | Blockchain SDK</title>
 
 		<link rel="stylesheet" href="css/font-awesome.min.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
