--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Dashboard</title>
+	<title>Dashboard | Blockchain SDK</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="css/reset.css">
@@ -100,13 +100,13 @@
 				</li>
 				<li id="contracts">
 					<a href="#" class="done">
-						<i class="fa fa-database"><span class="icon-bg rad-bg-warning"></span></i>
+						<i class="fa fa-bank"><span class="icon-bg rad-bg-warning"></span></i>
 						<span class="rad-sidebar-item">Contracts</span>
 					</a>
 				</li>
 				<li id="sandbox">
 					<a href="sandbox.html" target="_sandbox">
-						<i class="fa fa-code"><span class="icon-bg rad-bg-violet"></span></i>
+						<i class="fa fa-send"><span class="icon-bg rad-bg-violet"></span></i>
 						<span class="rad-sidebar-item">Sandbox</span>
 					</a>
 				</li>
