--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -185,12 +185,17 @@
 	<script type="text/javascript" src="js/vendor/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="js/vendor/jquery.slimscroll.min.js"></script>
 	<script type="text/javascript" src="js/vendor/underscore.min.js"></script>
+	<script type="text/javascript" src="js/vendor/backbone.js"></script>
+	<script type="text/javascript" src="js/vendor/bluebird.core.min.js"></script>
 	<script type="text/javascript" src="js/vendor/moment.min.js"></script>
 	<script type="text/javascript" src="js/vendor/sockjs-1.0.3.min.js"></script>
 	<script type="text/javascript" src="js/vendor/stomp.min.js"></script>
+
 	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
 	<script type="text/javascript" src="js/templates.js"></script>
+
+	<script type="text/javascript" src="js/model/contract.js"></script>
 
 </body>
 
