[sandbox] show the current state of a contract

--- a/src/main/webapp/sandbox.html
+++ b/src/main/webapp/sandbox.html
@@ -5,7 +5,7 @@
 
 		The MIT License (MIT)
 
-		Copyright (c) 2014, 2015, the individual contributors
+		Copyright (c) 2014, 2015, 2016 the individual contributors
 
 		Permission is hereby granted, free of charge, to any person obtaining a copy
 		of this software and associated documentation files (the "Software"), to deal
@@ -104,6 +104,16 @@
 							</div>
 						</div>
 
+						<div class="panel panel-default state">
+							<div class="panel-heading">
+								<h3 class="panel-title">
+									<span class="title">Contract State</span>
+									<span class="pull-right shrink"><i class="fa fa-minus-square-o"></i></span>
+								</h3>
+							</div>
+							<div class="body">
+							</div>
+						</div>
 
 						<div class="panel panel-default papertape">
 							<div class="panel-heading">
