NPDAPPS-2436 widget links

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -197,6 +197,11 @@
 
 	<script type="text/javascript" src="js/model/contract.js"></script>
 
+
+	<p style="width: 1px; height: 1px;">
+		<input type="text" id="_clipboard"/>
+		<button id="_clipboard_button" data-copytarget="#_clipboard">copy</button>
+	</p>
 </body>
 
 </html>
