--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -185,6 +185,7 @@
 	<script type="text/javascript" src="js/vendor/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="js/vendor/jquery.slimscroll.min.js"></script>
 	<script type="text/javascript" src="js/vendor/underscore.min.js"></script>
+	<script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/vendor/backbone.js"></script>
 	<script type="text/javascript" src="js/vendor/bluebird.core.min.js"></script>
 	<script type="text/javascript" src="js/vendor/moment.min.js"></script>
