NPDAPPS-2425 Contract state widget

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -195,6 +195,7 @@
 	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
 	<script type="text/javascript" src="js/templates.js"></script>
+	<script type="text/javascript" src="js/widgets/widget-root.js"></script>
 
 	<script type="text/javascript" src="js/model/contract.js"></script>
 
