--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,7 @@
 	<title>Dashboard | Blockchain SDK</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -125,7 +126,7 @@
 					</div>
 
 					<div class="row" id="grounds">
-
+						<div class="widget-sizer col-lg-3 col-md-4 col-xs-12" style="height: 250px;"></div>
 					</div>
 
 				</div>
@@ -142,6 +143,9 @@
 	<script type="text/javascript" src="js/vendor/moment.min.js"></script>
 	<script type="text/javascript" src="js/vendor/sockjs-1.0.3.min.js"></script>
 	<script type="text/javascript" src="js/vendor/stomp.min.js"></script>
+
+	<script type="text/javascript" src="js/vendor/jquery-ui-1.11.4.full.min.js"></script>
+	<script type="text/javascript" src="js/vendor/packery.2.0.min.js"></script>
 
 	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
