NPDAPPS-2548 refetch speedup

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@
 	<title>Dashboard | Blockchain SDK</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
+	<link rel="stylesheet" href="css/jquery-ui.min.css">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -144,7 +144,7 @@
 	<script type="text/javascript" src="js/vendor/sockjs-1.0.3.min.js"></script>
 	<script type="text/javascript" src="js/vendor/stomp.min.js"></script>
 
-	<script type="text/javascript" src="js/vendor/jquery-ui-1.11.4.full.min.js"></script>
+	<script type="text/javascript" src="js/vendor/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="js/vendor/packery.2.0.min.js"></script>
 
 	<script type="text/javascript" src="js/utils.js"></script>
