NPDAPPS-2549 Taking Dashboard out of Tower

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,6 +11,30 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
+
+	<script type="text/javascript" src="js/vendor/jquery-2.1.3.min.js"></script>
+	<script type="text/javascript" src="js/vendor/jquery.slimscroll.min.js"></script>
+	<script type="text/javascript" src="js/vendor/underscore.min.js"></script>
+	<script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/vendor/backbone.js"></script>
+	<script type="text/javascript" src="js/vendor/bluebird.core.min.js"></script>
+	<script type="text/javascript" src="js/vendor/moment.min.js"></script>
+	<script type="text/javascript" src="js/vendor/sockjs-1.0.3.min.js"></script>
+	<script type="text/javascript" src="js/vendor/stomp.min.js"></script>
+
+	<script type="text/javascript" src="js/vendor/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="js/vendor/packery.2.0.min.js"></script>
+
+	<script type="text/javascript" src="js/utils.js"></script>
+	<script type="text/javascript" src="js/index.js"></script>
+
+	<script type="text/javascript" src="js/dashboard-core.js"></script>
+	<script type="text/javascript" src="js/dashboard-util.js"></script>
+	<script type="text/javascript" src="js/dashboard-template.js"></script>
+
+	<script type="text/javascript" src="js/widgets/widget-root.js"></script>
+
+	<script type="text/javascript" src="js/model/contract.js"></script>
 </head>
 
 <body>
@@ -133,26 +157,6 @@
 			</div>
 		</section>
 	</main>
-
-	<script type="text/javascript" src="js/vendor/jquery-2.1.3.min.js"></script>
-	<script type="text/javascript" src="js/vendor/jquery.slimscroll.min.js"></script>
-	<script type="text/javascript" src="js/vendor/underscore.min.js"></script>
-	<script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/vendor/backbone.js"></script>
-	<script type="text/javascript" src="js/vendor/bluebird.core.min.js"></script>
-	<script type="text/javascript" src="js/vendor/moment.min.js"></script>
-	<script type="text/javascript" src="js/vendor/sockjs-1.0.3.min.js"></script>
-	<script type="text/javascript" src="js/vendor/stomp.min.js"></script>
-
-	<script type="text/javascript" src="js/vendor/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="js/vendor/packery.2.0.min.js"></script>
-
-	<script type="text/javascript" src="js/utils.js"></script>
-	<script type="text/javascript" src="js/index.js"></script>
-	<script type="text/javascript" src="js/templates.js"></script>
-	<script type="text/javascript" src="js/widgets/widget-root.js"></script>
-
-	<script type="text/javascript" src="js/model/contract.js"></script>
 
 
 	<p style="width: 1px; height: 1px;">
