Removing unused extras

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -41,55 +41,55 @@
 
 	<section>
 		<header>
-			<nav class="rad-navigation">
-				<div class="rad-logo-container">
-					<a href="#" class="rad-logo">Tower Control</a>
-					<a href="#" class="rad-toggle-btn pull-right"><i class="fa fa-bars"></i></a>
+			<nav class="tower-navigation">
+				<div class="tower-logo-container">
+					<a href="#" class="tower-logo">Tower Control</a>
+					<a href="#" class="tower-toggle-btn pull-right"><i class="fa fa-bars"></i></a>
 				</div>
-				<a href="#" class="rad-logo-hidden">Tower Control</a>
+				<a href="#" class="tower-logo-hidden">Tower Control</a>
 			</nav>
 		</header>
 	</section>
 
 	<aside>
-		<nav class="rad-sidebar">
+		<nav class="tower-sidebar">
 			<ul>
 				<li id="console">
 					<a href="#" class="inbox">
-						<i class="fa fa-dashboard"><span class="icon-bg rad-bg-success"></span></i>
-						<span class="rad-sidebar-item">Console</span>
+						<i class="fa fa-dashboard"><span class="icon-bg tower-bg-success"></span></i>
+						<span class="tower-sidebar-item">Console</span>
 					</a>
 				</li>
 				<li id="peers">
 					<a href="#">
 						<i class="fa fa-users">
-						<span class="icon-bg rad-bg-danger"></span>
+						<span class="icon-bg tower-bg-danger"></span>
 					</i>
-						<span class="rad-sidebar-item">Peers</span>
+						<span class="tower-sidebar-item">Peers</span>
 					</a>
 				</li>
 				<li id="api">
 					<a href="#" class="snooz">
-						<i class="fa fa-book"><span class="icon-bg rad-bg-primary"></span></i>
-						<span class="rad-sidebar-item">API</span>
+						<i class="fa fa-book"><span class="icon-bg tower-bg-primary"></span></i>
+						<span class="tower-sidebar-item">API</span>
 					</a>
 				</li>
 				<li id="contracts">
 					<a href="#" class="done">
-						<i class="fa fa-bank"><span class="icon-bg rad-bg-warning"></span></i>
-						<span class="rad-sidebar-item">Contracts</span>
+						<i class="fa fa-bank"><span class="icon-bg tower-bg-warning"></span></i>
+						<span class="tower-sidebar-item">Contracts</span>
 					</a>
 				</li>
 				<li id="sandbox">
 					<a href="sandbox.html" target="_sandbox">
-						<i class="fa fa-send"><span class="icon-bg rad-bg-violet"></span></i>
-						<span class="rad-sidebar-item">Sandbox</span>
+						<i class="fa fa-send"><span class="icon-bg tower-bg-violet"></span></i>
+						<span class="tower-sidebar-item">Sandbox</span>
 					</a>
 				</li>
 				<li id="explorer">
 					<a href="#" class="done">
-						<i class="fa fa-cubes"><span class="icon-bg rad-bg-success"></span></i>
-						<span class="rad-sidebar-item">Chain Explorer</span>
+						<i class="fa fa-cubes"><span class="icon-bg tower-bg-success"></span></i>
+						<span class="tower-sidebar-item">Chain Explorer</span>
 					</a>
 				</li>
 			</ul>
@@ -100,15 +100,15 @@
 
 	<main>
 		<section>
-			<div class="rad-body-wrapper">
+			<div class="tower-body-wrapper">
 				<div class="container-fluid">
-					<header class="rad-page-title">
+					<header class="tower-page-title">
 						<span>Console</span>
 					</header>
 
 					<div class="row">
 						<div class="col-lg-3 col-xs-6">
-							<div class="rad-info-box rad-txt-success">
+							<div class="tower-nugget tower-txt-success">
 								<i class="fa fa-play"></i>
 								<span class="heading">Node Status</span>
 								<span class="value default" id="default-node-status">
@@ -118,7 +118,7 @@
 						</div>
 
 						<div class="col-lg-3 col-xs-6">
-							<div class="rad-info-box">
+							<div class="tower-nugget">
 								<i class="fa fa-users"></i>
 								<span class="heading">Peers</span>
 								<span class="value default" id="default-peers">
@@ -128,7 +128,7 @@
 						</div>
 
 						<div class="col-lg-3 col-xs-6">
-							<div class="rad-info-box rad-txt-primary">
+							<div class="tower-nugget tower-txt-primary">
 								<i class="fa fa-cubes"></i>
 								<span class="heading">Blocks</span>
 								<span class="value default" id="default-blocks">
@@ -138,7 +138,7 @@
 						</div>
 
 						<div class="col-lg-3 col-xs-6">
-							<div class="rad-info-box rad-txt-danger">
+							<div class="tower-nugget tower-txt-danger">
 								<i class="fa fa-exchange"></i>
 								<span class="heading">Queued Transactions</span>
 								<span class="value default" id="default-txn">
