--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -92,6 +92,12 @@
 						<span class="tower-sidebar-item">Chain Explorer</span>
 					</a>
 				</li>
+				<li id="wallet">
+					<a href="#" class="done">
+						<i class="fa fa-google-wallet"><span class="icon-bg tower-bg-danger"></span></i>
+						<span class="tower-sidebar-item">Accounts</span>
+					</a>
+				</li>
 			</ul>
 		</nav>
 	</aside>
