--- a/src/main/webapp/sandbox.html
+++ b/src/main/webapp/sandbox.html
@@ -82,10 +82,11 @@
 								</h3>
 							</div>
 							<div class="panel-body">
-								<div class="form-group">
+								<div class="form-group contracts">
 									<label>From Deployed Contracts:
 										<select class="form-control contracts"></select>
 									</label>
+									<i class="refresh fa fa-refresh fa-2x fa-spin start_hidden"></i>
 								</div>
 
 								<div class="form-group">
