--- a/src/main/webapp/sandbox.html
+++ b/src/main/webapp/sandbox.html
@@ -198,6 +198,7 @@
 		<script src="js/vendor/base64.js"></script>
 		<script src="js/vendor/jquery-2.1.3.min.js"></script>
 		<script src="js/vendor/jquery-ui.min.js"></script>
+		<script src='js/vendor/jquery.scrollintoview.min.js' type='text/javascript'></script>
 		<script src="js/vendor/ace.js"></script>
 		<script src="js/vendor/mode-solidity.js"></script>
 
