--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,11 +6,12 @@
 	<title>Dashboard | Blockchain SDK</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" href="css/jquery-ui.min.css">
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css">
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/epoch.min.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<script type="text/javascript" src="js/vendor/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="js/vendor/jquery.slimscroll.min.js"></script>
@@ -21,6 +22,8 @@
 	<script type="text/javascript" src="js/vendor/moment.min.js"></script>
 	<script type="text/javascript" src="js/vendor/sockjs-1.0.3.min.js"></script>
 	<script type="text/javascript" src="js/vendor/stomp.min.js"></script>
+	<script type="text/javascript" src="js/vendor/d3.min.js"></script>
+	<script type="text/javascript" src="js/vendor/epoch.js"></script>
 
 	<script type="text/javascript" src="js/vendor/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="js/vendor/packery.2.0.min.js"></script>
