[NPDAPPS-2673] display mapping key/val data in the sandbox ui
* Current implementation requires injection of code into the contract
* before deploying onto the chain. "Linked list" mappings should be
* supported in the future.

--- a/src/main/webapp/sandbox.html
+++ b/src/main/webapp/sandbox.html
@@ -113,8 +113,6 @@
 									<span class="pull-right shrink"><i class="fa fa-minus-square-o"></i></span>
 								</h3>
 							</div>
-							<div class="body">
-							</div>
 						</div>
 
 						<div class="panel panel-default papertape">
@@ -156,6 +154,12 @@
 						<div class="container-fluid">
 							<div class="row">
 								<div class="col-sm-12">
+									<h4>Transaction Playground Options:</h4>
+									<div class="checkbox">
+										<label>
+											<input id="base64" type="checkbox" checked>Treat All Byte Arrays as Strings
+										</label>
+									</div>
 
 									<h4>Editor Options:</h4>
 									<div class="checkbox">
