--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,7 +23,7 @@
 	<script type="text/javascript" src="js/vendor/sockjs-1.0.3.min.js"></script>
 	<script type="text/javascript" src="js/vendor/stomp.min.js"></script>
 	<script type="text/javascript" src="js/vendor/d3.min.js"></script>
-	<script type="text/javascript" src="js/vendor/epoch.js"></script>
+	<script type="text/javascript" src="js/vendor/epoch.min.js"></script>
 
 	<script type="text/javascript" src="js/vendor/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="js/vendor/packery.2.0.min.js"></script>
