--- a/src/main/webapp/sandbox.html
+++ b/src/main/webapp/sandbox.html
@@ -42,159 +42,188 @@
 	</head>
 	<body>
 
-		<div class="container-fs">
-				<div class="editor" id="editor">
+		<div class="container-fluid container-fs">
+			<div class="row">
 
-					<ul class="nav nav-tabs filetabs" role="tablist">
-						<li>
-							<a aria-controls="new_file" role="button" class="new_file button"><i class="fa fa-file-text-o"></i></a>
-						</li>
-						<li role="presentation" class="file">
-							<a role="tab" data-toggle="tab">
-								<span class="name">Untitled 1</span> <span class="remove"><i class="fa fa-close red"></i></span>
-							</a>
-						</li>
-					</ul>
+				<div class="col-md-6">
 
-					<div class="tab-content">
-						<div role="tabpanel" class="tab-pane active" id="editor_tab">
-							<div id="editor_input"></div>
+					<div class="editor" id="editor">
+
+						<ul class="nav nav-tabs filetabs" role="tablist">
+							<li>
+								<a aria-controls="new_file" role="button" class="new_file button"><i class="fa fa-file-text-o"></i></a>
+							</li>
+							<li role="presentation" class="file">
+								<a role="tab" data-toggle="tab">
+									<span class="name">Untitled 1</span> <span class="remove"><i class="fa fa-close red"></i></span>
+								</a>
+							</li>
+						</ul>
+
+						<div class="tab-content">
+							<div role="tabpanel" class="tab-pane active" id="editor_tab">
+								<div id="editor_input"></div>
+							</div>
 						</div>
+
 					</div>
 
 				</div>
 
-				<div class="sidebar" id="sidebar">
+				<div class="col-md-6">
 
-					<ul class="nav nav-pills sidenav">
-					  <li role="presentation" class="active txView"><a title="Transaction Playground"><i class="fa fa-send"></i></a></li>
-					  <li role="presentation" class="libView"><a title="Contract Library"><i class="fa fa-bank"></i></a></li>
-					  <li role="presentation" class="compilerView"><a title="Compiler Output"><i class="fa fa-code"></i></a></li>
-					  <li role="presentation" class="settingsView"><a title="Settings"><i class="fa fa-gear"></i></a></li>
-					</ul>
+					<div class="sidebar" id="sidebar">
 
-					<div id="txView" class="tab">
-						<div class="panel panel-default select_contract">
-							<div class="panel-heading">
-								<h3 class="panel-title">
-									<span class="title">Choose Contract</span>
-									<span class="pull-right shrink"><i class="fa fa-minus-square-o"></i></span>
-								</h3>
-							</div>
-							<div class="panel-body">
-								<div class="form-group contracts">
-									<label>From Deployed Contracts:
-										<select class="form-control"></select>
-									</label>
-									<i class="refresh fa fa-refresh fa-2x fa-spin start_hidden"></i>
-								</div>
+						<ul class="nav nav-pills sidenav">
+						  <li role="presentation" class="active txView"><a title="Transaction Playground"><i class="fa fa-send"></i></a></li>
+						  <li role="presentation" class="libView"><a title="Contract Library"><i class="fa fa-bank"></i></a></li>
+						  <li role="presentation" class="compilerView"><a title="Compiler Output"><i class="fa fa-code"></i></a></li>
+						  <li role="presentation" class="settingsView"><a title="Settings"><i class="fa fa-gear"></i></a></li>
+						</ul>
 
-								<div class="form-group compiled_contracts">
-									<label>Or Deploy From Editor:
-										<select class="form-control"></select>
-									</label>
-									<i class="refresh fa fa-refresh fa-2x fa-spin start_hidden"></i>
-									<div class="form-group constructor start_hidden">
-									</div>
-								</div>
+						<div id="txView" class="tab">
+							<div class="container-fluid">
+								<div class="row">
 
-								<div class="form-group address">
-									<label>Or Enter Address:
-										<input type="text" class="form-control" placeholder="address">
-									</label>
-								</div>
-							</div>
-						</div>
+									<div class="col-md-6">
 
-						<div class="panel panel-default state">
-							<div class="panel-heading">
-								<h3 class="panel-title">
-									<span class="title">Contract State</span>
-									<span class="pull-right shrink"><i class="fa fa-minus-square-o"></i></span>
-								</h3>
-							</div>
-						</div>
+										<div class="panel panel-default select_contract">
+											<div class="panel-heading">
+												<h3 class="panel-title">
+													<span class="title">Choose Contract</span>
+													<span class="pull-right shrink"><i class="fa fa-minus-square-o"></i></span>
+												</h3>
+											</div>
+											<div class="panel-body">
+												<div class="form-group contracts">
+													<label>From Deployed Contracts:
+														<select class="form-control"></select>
+													</label>
+													<i class="refresh fa fa-refresh fa-2x fa-spin start_hidden"></i>
+												</div>
 
-						<div class="panel panel-default papertape">
-							<div class="panel-heading">
-								<h3 class="panel-title">
-									<span class="title">Paper Tape</span>
-									<span class="pull-right shrink"><i class="fa fa-minus-square-o"></i></span>
-								</h3>
-							</div>
-							<div class="panel-body">
-							</div>
-						</div>
+												<div class="form-group compiled_contracts">
+													<label>Or Deploy From Editor:
+														<select class="form-control"></select>
+													</label>
+													<i class="refresh fa fa-refresh fa-2x fa-spin start_hidden"></i>
+													<div class="form-group constructor start_hidden">
+													</div>
+												</div>
 
-						<div class="panel panel-default transact">
-							<div class="panel-heading">
-								<h3 class="panel-title">
-									<span class="title">Transact</span>
-									<span class="pull-right shrink"><i class="fa fa-minus-square-o"></i></span>
-								</h3>
-							</div>
-							<div class="panel-body">
-							</div>
-						</div>
+												<div class="form-group address">
+													<label>Or Enter Address:
+														<input type="text" class="form-control" placeholder="address">
+													</label>
+												</div>
+											</div>
+										</div>
 
-					</div>
+										<div class="panel panel-default transact">
+											<div class="panel-heading">
+												<h3 class="panel-title">
+													<span class="title">Transact</span>
+													<span class="pull-right shrink"><i class="fa fa-minus-square-o"></i></span>
+												</h3>
+											</div>
+											<div class="panel-body">
+											</div>
+										</div>
 
-					<div id="libView" class="tab start_hidden">
-
-						<h3>Contract Library</h3>
-
-						<div><a class="contract" data-name="Greeter">Greeter (Hello World)</a></div>
-						<div><a class="contract" data-name="SimpleStorage">Simple Storage</a></div>
-						<div><a class="contract" data-name="Bank">Bank</a></div>
-						<div><a class="contract" data-name="Ballot">Ballot</a></div>
-
-					</div>
-
-					<div id="settingsView" class="start_hidden tab">
-						<div class="container-fluid">
-							<div class="row">
-								<div class="col-sm-12">
-									<h4>Transaction Playground Options:</h4>
-									<div class="checkbox">
-										<label>
-											<input id="base64" type="checkbox" checked>Treat All Byte Arrays as Strings
-										</label>
 									</div>
 
-									<h4>Editor Options:</h4>
-									<div class="checkbox">
-										<label>
-											<input id="editorWrap" type="checkbox"> Text Wrap
-										</label>
-									</div>
 
-									<h4>Compiler Options:</h4>
-									<div class="checkbox">
-										<label>
-											<input id="optimize" type="checkbox">Enable Optimization
-										</label>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
 
-					<div id="compilerView" class="start_hidden tab">
-						<div class="container-fluid">
-							<div class="row">
-								<div class="col-sm-12">
+									<div class="col-md-6 col3">
+										<div class="panel panel-default state">
+											<div class="panel-heading">
+												<h3 class="panel-title">
+													<span class="title">Contract State</span>
+													<span class="pull-right shrink"><i class="fa fa-minus-square-o"></i></span>
+												</h3>
+											</div>
+										</div>
 
-									<div id="output">
-								        <h3>Compiler Output</h3>
-										<div class="compiler_output"></div>
+										<div class="panel panel-default papertape">
+											<div class="panel-heading">
+												<h3 class="panel-title">
+													<span class="title">Paper Tape</span>
+													<span class="pull-right shrink"><i class="fa fa-minus-square-o"></i></span>
+												</h3>
+											</div>
+											<div class="panel-body">
+											</div>
+										</div>
 									</div>
 
 								</div>
 							</div>
 						</div>
+
+						<div id="libView" class="tab start_hidden">
+
+							<h3>Contract Library</h3>
+
+							<div><a class="contract" data-name="Greeter">Greeter (Hello World)</a></div>
+							<div><a class="contract" data-name="SimpleStorage">Simple Storage</a></div>
+							<div><a class="contract" data-name="Bank">Bank</a></div>
+							<div><a class="contract" data-name="Ballot">Ballot</a></div>
+
+						</div>
+
+						<div id="settingsView" class="start_hidden tab">
+							<div class="container-fluid">
+								<div class="row">
+									<div class="col-sm-12">
+										<h4>Transaction Playground Options:</h4>
+										<div class="checkbox">
+											<label>
+												<input id="base64" type="checkbox" checked>Treat All Byte Arrays as Strings
+											</label>
+										</div>
+
+										<h4>Editor Options:</h4>
+										<div class="checkbox">
+											<label>
+												<input id="editorWrap" type="checkbox"> Text Wrap
+											</label>
+										</div>
+
+										<h4>Compiler Options:</h4>
+										<div class="checkbox">
+											<label>
+												<input id="optimize" type="checkbox">Enable Optimization
+											</label>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div id="compilerView" class="start_hidden tab">
+							<div class="container-fluid">
+								<div class="row">
+									<div class="col-sm-12">
+
+										<div id="output">
+									        <h3>Compiler Output</h3>
+											<div class="compiler_output"></div>
+										</div>
+
+									</div>
+								</div>
+							</div>
+						</div>
+
 					</div>
 
 				</div>
+
+				<!-- <div class="col-md-3">
+
+				</div> -->
+
+			</div>
 		</div>
 
 
@@ -202,7 +231,7 @@
 		<script src="js/vendor/base64.js"></script>
 		<script src="js/vendor/jquery-2.1.3.min.js"></script>
 		<script src="js/vendor/jquery-ui.min.js"></script>
-		<script src='js/vendor/jquery.scrollintoview.min.js' type='text/javascript'></script>
+		<script src='js/vendor/jquery.scrolltofixed.min.js' type='text/javascript'></script>
 		<script src="js/vendor/ace.js"></script>
 		<script src="js/vendor/mode-solidity.js"></script>
 
