[sandbox] display account listing

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -38,6 +38,7 @@
 	<script type="text/javascript" src="js/widgets/widget-root.js"></script>
 
 	<script type="text/javascript" src="js/model/contract.js"></script>
+	<script type="text/javascript" src="js/model/account.js"></script>
 </head>
 
 <body>
