--- a/src/main/webapp/sandbox.html
+++ b/src/main/webapp/sandbox.html
@@ -135,6 +135,15 @@
 
 
 									<div class="col-md-6 col3">
+										<div class="panel panel-default accounts">
+											<div class="panel-heading">
+												<h3 class="panel-title">
+													<span class="title">Accounts</span>
+													<span class="pull-right shrink"><i class="fa fa-minus-square-o"></i></span>
+												</h3>
+											</div>
+										</div>
+
 										<div class="panel panel-default state">
 											<div class="panel-heading">
 												<h3 class="panel-title">
@@ -219,10 +228,6 @@
 
 				</div>
 
-				<!-- <div class="col-md-3">
-
-				</div> -->
-
 			</div>
 		</div>
 
@@ -247,6 +252,7 @@
 		<script src="js/client.js" charset="utf-8"></script>
 		<script src="js/model/contract.js" charset="utf-8"></script>
 		<script src="js/model/transaction.js" charset="utf-8"></script>
+		<script src="js/model/account.js" charset="utf-8"></script>
 
 		<script src="js/sandbox/init.js" charset="utf-8"></script>
 		<script src="js/sandbox/lib.js" charset="utf-8"></script>
