--- a/src/main/webapp/sandbox.html
+++ b/src/main/webapp/sandbox.html
@@ -158,6 +158,7 @@
 												<h3 class="panel-title">
 													<span class="title">Paper Tape</span>
 													<span class="pull-right shrink"><i class="fa fa-minus-square-o"></i></span>
+													<span class="pull-right trash"><a title="Clear the paper tape"><i class="fa fa-trash-o"></i></a></span>
 												</h3>
 											</div>
 											<div class="panel-body">
