[refactor] extract Contract Proxy class

--- a/src/main/webapp/sandbox.html
+++ b/src/main/webapp/sandbox.html
@@ -250,6 +250,7 @@
 		<script src="js/vendor/stomp.min.js" charset="utf-8"></script>
 		<script src="js/client.js" charset="utf-8"></script>
 		<script src="js/model/contract.js" charset="utf-8"></script>
+		<script src="js/model/contract.proxy.js" charset="utf-8"></script>
 		<script src="js/model/transaction.js" charset="utf-8"></script>
 		<script src="js/model/account.js" charset="utf-8"></script>
 
