--- a/src/main/webapp/sandbox.html
+++ b/src/main/webapp/sandbox.html
@@ -85,7 +85,7 @@
 							<div class="container-fluid">
 								<div class="row">
 
-									<div class="col-md-6">
+									<div class="col-md-6 col2">
 
 										<div class="panel panel-default select_contract">
 											<div class="panel-heading">
